--- a/SoundGarden/index.html
+++ b/SoundGarden/index.html
@@ -51,10 +51,17 @@
         <img src="img/Sound-logo (1).png" width="300" alt="">
     </header>
     <main>
+        <body>
+    <header class=" d-flex justify-content-center align-items-center">
+        <img src="img/Sound-logo (1).png" width="300" alt="">
+    </header>
+    <main>
         <section class="full d-flex justify-content-center align-items-center"
             style="background-color: #F8BBD0; color: #fff">
             <div class="text-center">
-                <h1>Adicione um banner maneiro aqui</h1>
+                <div class="banner-principal">
+                    <img src="img/banner-01.jpg" width="600" alt="100">
+                </div>
             </div>
         </section>
         <section class="full">
@@ -136,7 +143,7 @@
             </form>
         </div>
     </div>
-   
+        </body>
     <footer>
         <div class="container d-flex justify-content-center align-items-center">
             <a href="#">
