--- a/admin.html
+++ b/admin.html
@@ -34,6 +34,11 @@
                             Eventos
                         </a>
                     </li>
+                    <li>
+                        <a href="./reservas.html" class="nav-link link-dark">
+                            Reservas
+                        </a>
+                    </li>
 
                     <li>
                         <a href="#" class="nav-link link-dark">
