--- a/admin.html
+++ b/admin.html
@@ -18,12 +18,12 @@
         <div class="row">
             <aside class="d-flex flex-column flex-shrink-0 p-3 bg-light col-2">
 
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                <a href="./index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap"></use>
                     </svg>
                     <span class="fs-4 px-5">
-                        <img src="img/Sound-logo.png" alt="Gama Lounge" class="img-responsive">
+                        <img  src="img/Sound-logo.png" alt="Gama Lounge" class="img-responsive">
                     </span>
                 </a>
                 <p class="text-center">painel administrativo</p>
