--- a/excluir-evento.html
+++ b/excluir-evento.html
@@ -17,7 +17,8 @@
         <div class="row">
             <aside class="d-flex flex-column flex-shrink-0 p-3 bg-light col-2">
 
-                <a href="./index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                <a href="./index.html"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap"></use>
                     </svg>
@@ -31,6 +32,11 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link active" aria-current="page">
                             Eventos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./reservas.html" class="nav-link link-dark">
+                            Reservas
                         </a>
                     </li>
 
@@ -100,7 +106,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="js/excluir.js"></script>
 </body>
 
